# tgfp-web

./: .dockerignore  .env  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  README.md  alembic.ini  bump_version.sh  compose.dev.yml  compose.local.dev.yml  compose.prod.yml  create_dev_env.sh  create_prod_env.sh  deploy.sh  dev-docker-compose.yaml  dev.env  docker-compose.yaml  op.env  package-lock.json  prefect_fetch.py  pyproject.toml  requirements.txt  test_and_lint.sh  tgfp-web.service  version.env
.githooks/: README.md  pre-push
.run/: Flask (flask_site_app.py).run.xml
alembic/: env.py
app/: logging_config.py  main.py  model_helper.py  models.py  old_main.py  old_models.py  profile.html
config/: op.env  requirements.txt  tgfp-bot.service  version.env
db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6616136835852730913.wt  collection-0--9004771199726202089.wt  collection-2--6616136835852730913.wt  collection-2--9004771199726202089.wt  collection-3--9004771199726202089.wt  collection-4--6616136835852730913.wt  collection-4--9004771199726202089.wt  collection-7--6616136835852730913.wt  collection-8--9004771199726202089.wt  collection-9--9004771199726202089.wt  index-1--6616136835852730913.wt  index-1--9004771199726202089.wt  index-10--9004771199726202089.wt  index-11--9004771199726202089.wt  index-3--6616136835852730913.wt  index-5--6616136835852730913.wt  index-5--9004771199726202089.wt  index-6--6616136835852730913.wt  index-6--9004771199726202089.wt  index-7--9004771199726202089.wt  index-8--6616136835852730913.wt  index-9--6616136835852730913.wt  sizeStorer.wt
docker/: entrypoint.sh
docs/: sample.env
fastapi_site/: main.py
flask_site/: app.py  config.py
original_assets/: awards.pxd  tgfp_badges_small.pxd
scripts/: alembic_generate_migration.sh  alembic_upgrade_head.sh  bump_version.sh  create_dev_env.sh  (+11 more)
(+237 files in other folders)
